checked js is being compiled

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="wrapper">
   <h1>Parcel Stylus Boilerplate</h1>
+  <p id="caption"></p>
   </div>
 <script src="./index.js" charset="utf-8"></script>
 </body>
