--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,26 @@
   <h1>Parcel Stylus Boilerplate</h1>
   <p id="caption"></p>
   </div>
+  <section class="section" id="section_1">
+      <h1 class="title">Section 1 Title</h1>
+  </section>
+  <section class="section" id="section_2">
+      <h1 class="title">Section 2 Title</h1>
+  </section>
+  <section class="section" id="section_3">
+      <h1 class="title">Section 3 Title</h1>
+  </section>
+  <section class="section" id="section_4">
+      <h1 class="title">Section 4 Title</h1>
+  </section>
+  <section class="section" id="section_5">
+      <h1 class="title">Section 5 Title</h1>
+  </section>
+
+
+
+
+
 <script src="./index.js" charset="utf-8"></script>
 </body>
 </html>
