--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,6 @@
           <div class="icon-bar"></div>
           <div class="icon-bar"></div>
       </div>
-
-
       <nav id='nav' class='mainNav hide show'>
           <ul class='mainNav__ul' id='navUl'>
               <li><a href='#home'>Home</a></li>
@@ -41,14 +39,33 @@
   <div class="wrapper" id='home'>
   <h1 class='site-title'>A Parcel Stylus Boilerplate<br/>c/w</h1>
   <h2>Smooth scroll navigation</h2>
-  <p class='tagline'>The entire navigation is built using vanilla js. No libraries, such as jquery, are used</p>
+  <p class='tagline'>The entire navigation is built using vanilla js. No libraries, such as jquery, are used<br/>
+    The styling is taken care of using the stylus preprocessor</p>
   </div>
   <section class="section" id="section_1">
       <h1 class="title">Section 1 Title</h1>
-
+      <div class="flext">
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+      </div>
+    
   </section>
   <section class="section" id="section_2">
       <h1 class="title">Section 2 Title</h1>
+      <div class="gridz">
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>
+          <div class="item"></div>          
+      </div>
 
   </section>
   <section class="section" id="section_3">
