--- a/src/index.html
+++ b/src/index.html
@@ -75,8 +75,9 @@
                 <p class="section-tagline">From years of experience gained from smaller projects, we can now confidently apply our expertise to much larger projects</p>
                 <div class="subs">
                     <img src="img/westdales.jpg" alt="">
-                    <img src="img/Nottingham-City-Homes.jpg" alt="">
                     <img src="img/pfp.jpg" alt="">
+                    <img src="img/Nottingham-City-Homes.jpg" alt="">
+
                 </div>
             </header>             
          </div>
@@ -121,7 +122,7 @@
   <section class="section" id="section-2">
       <header>
         <h2 class='section-title'><span><embed class='section-logo' src="img/logo.svg">
-                    </span>other services</h2>
+                    <br/></span>other services</h2>
                     <hr/>
           <p>section tagline</p>
       </header>
@@ -175,7 +176,7 @@
   <section class="section" id="section-3">
         <header>
             <h2 class='section-title'><span><embed class='section-logo' src="img/logo.svg">
-                            </span>gallery</h2>
+                            <br/></span>gallery</h2>
                             <hr/>
             <p>a glance at some of our completed and ongoing projects</p>
         </header>
@@ -218,7 +219,7 @@
   <section class="section" id="section-4">
         <header>
              <h2 class='section-title'><span><embed class='section-logo' src="img/logo.svg">
-                                </span>accredition</h2>
+                                <br/></span>accredition</h2>
                                 <hr/>
             <p>VB building services are CHAS accredited</p>
         </header>
@@ -240,7 +241,7 @@
   <section class="section" id="section-5">
     <header>
         <h2 class='section-title'><span><embed class='section-logo' src="img/logo.svg">
-                           </span>contact</h2>
+                           <br/></span>contact</h2>
                            <hr/>
        <p>getting in touch is easy</p>
    </header>
