--- a/src/index.html
+++ b/src/index.html
@@ -44,26 +44,26 @@
                     <p>Tel: 01709 889184<br/>info@vbirdconstruction.co.uk</p>
                 </div>
             </div>
+            <!-- <div class="gap"></div> -->
             <div class="menuIcon" id='openMenu'>
                 <div class="icon-bar"></div>
                 <div class="icon-bar"></div>
                 <div class="icon-bar"></div>
             </div>
-            <nav id='nav' class='mainNav show'>
+            <nav id='nav' class='mainNav hide show'>
                 <ul class='mainNav__ul' id='navUl'>
                     <li><a href='#home'>Home</a></li>
-                    <li><a href='#section-1'>Section 1</a></li>
-                    <li><a href='#section-2'>Section 2</a></li>
-                    <li><a href='#section-3'>Section 3</a></li>
-                    <li><a href='#section-4'>Section 4</a></li>
-                    <li><a href='#section-5'>Section 5</a></li>
+                    <li><a href='#projects'>Projects</a></li>
+                    <li><a href='#services'>Services</a></li>
+                    <li><a href='#gallery'>Gallery</a></li>
+                    <li><a href='#accredition'>Accredition</a></li>
+                    <li><a href='#contact'>Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-  <section class="section" id="section-1">
-  
+  <section class="section" id="projects">
      <article>
          <div class="item">
              <header class='section-header section-1__header'>
@@ -118,7 +118,7 @@
      </article> 
     
   </section>
-  <section class="section" id="section-2">
+  <section class="section" id="services">
       <header>
         <h2 class='section-title'><span><embed class='section-logo' src="img/logo.svg">
                     <br/></span>other services</h2>
@@ -162,41 +162,16 @@
                   <figcaption>Government Funded Energy Schemes</figcaption>
                 </figure>
               </div>
-
-
-
-
-
-
       </article>
 
-
   </section>
-  <section class="section" id="section-3">
+  <section class="section" id="gallery">
         <header>
             <h2 class='section-title'><span><embed class='section-logo' src="img/logo.svg">
                             <br/></span>gallery</h2>
                             <hr/>
             <p>a glance at some of our completed and ongoing projects</p>
         </header>
-
-      <!-- <div class="gallery">
-            <div class="main-img">
-                <img src="img/img1.jpg" id='current'  alt="">
-            </div>
-            <div class="imgs">
-                <img src="img/img1.jpg" >
-                <img src="img/img2.jpg" >
-                <img src="img/img3.jpg" id='' alt="">
-                <img src="img/img4.jpg" id='' alt="">
-                <img src="img/img5.jpg" id='' alt="">
-                <img src="img/img6.jpg" id='' alt="">
-                <img src="img/img7.jpg" id='' alt="">
-                <img src="img/img8.jpg" id='' alt="">
-            </div>   
-        </div> -->
-
-
         <div class="gallery imgs">
             <div class="main-img">
                 <img src="img/img1.jpg" id='current'  alt="">
@@ -215,7 +190,7 @@
 
 
   </section>
-  <section class="section" id="section-4">
+  <section class="section" id="accredition">
         <header>
              <h2 class='section-title'><span><embed class='section-logo' src="img/logo.svg">
                                 <br/></span>accredition</h2>
@@ -225,19 +200,18 @@
         <article>
 
           <div class="item" role='presentation'>
-                <img src="img/chas.png" alt="">
+                <img src="img/Chas.png" alt="">
           </div> 
           <div class="item" role='presentation'>
                 <h3>who are CHAS?</h3> 
-                <p>CHAS are an authorative accredition company that ensures its members comply with the most strignent health and safety legistation. All our members receive expert advice on safety, efficiency and environmental apsects concerning the construction industry
-
-                        Many organisations insist their contractors are health and safety accredited. CHAS members are automatically approved by over 1000 organisations
-                        
-                        By continually assessing all members, CHAS provide you with the assuarance and high safety standards you're entitled to expect... <a href='https://www.chas.co.uk/'>find out more</a></p>             
+                <p>CHAS are an authorative accredition company that ensures its members comply with the most strignent health and safety legistation. All our members receive expert advice on safety, efficiency and environmental apsects concerning the construction industry</p>
+                <p>
+                Many organisations insist their contractors are health and safety accredited. CHAS members are automatically approved by over 1000 organisations      
+                By continually assessing all members, CHAS provide you with the assuarance and high safety standards you're entitled to expect... <a href='https://www.chas.co.uk/'>find out more</a></p>             
         </div>            
         </article>
   </section>
-  <section class="section" id="section-5">
+  <section class="section" id="contact">
     <header>
         <h2 class='section-title'><span><embed class='section-logo' src="img/logo.svg">
                            <br/></span>contact</h2>
@@ -260,6 +234,7 @@
 
            </div>
            <form action="https://formspree.io/info@vbirdconstruction.com">
+            <h4>Contact Form</h4>
                <input type="text" name='name' placeholder='Name' required>
                <input type="email" name='_replyto' placeholder='Email address' required>
                <textarea name="message" placeholder='Your Message' required rows="4" cols="50"></textarea>
